--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -17,7 +17,7 @@
 
 .banner-content h1 {
   font-family: "GutonExtBd", Georgia; 
-  font-size: 5rem;
+  font-size: 4rem;
   margin: 0;
 }
 
@@ -59,7 +59,7 @@
     align-items: center;
   }
   .banner-img {
-    content: url("../../../assets/banner\ principal\ mobile.png"); /* Cambia a la imagen de escritorio */
+    content: url("../../../assets/banner-mobile.png"); /* Cambia a la imagen de escritorio */
   }
   #home img {
     width: 100%;
