--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -18,6 +18,7 @@
    <ng-container *ngIf="personalLoaded">
     <app-personal/>
     <app-jefes></app-jefes>
+    <app-experiencia></app-experiencia>
   </ng-container>
     
 }
