--- a/src/app/components/nabvar/dragos/dragos.component.html
+++ b/src/app/components/nabvar/dragos/dragos.component.html
@@ -1,11 +1,17 @@
-<div class="background">
-    <div class="container">
-        <div class="alianza-container">
-            <h1>Nuestra alianza con</h1>
-            <img src="../../../../assets/dragos.png" alt="Logo de Dragos" class="logo">
-            <p>Salem es canal oficial de Dragos en la región. Ofrecemos acceso a la tecnología más avanzada en ciberseguridad industrial.</p>
-            <p>Dragos es, por excelencia, una plataforma diseñada para proteger los sistemas contra ciberataques, asegurando la continuidad y seguridad de las operaciones.</p>
-            <p>Con Dragos, garantizamos la protección necesaria para enfrentar los desafíos cibernéticos actuales, asegurando la seguridad y resiliencia de nuestras infraestructuras críticas.</p>
-        </div>
-        </div>
-</div>
+<section class="cybersecurity-section">
+    <h2>Servicios Clave <br> de Ciberseguridad</h2>
+    <div class="services-container">
+      <div class="service-card">
+        <h3>Evaluación de indicadores de compromiso</h3>
+        <p>Inspección del tráfico en busca de amenazas.</p>
+      </div>
+      <div class="service-card">
+        <h3>Ejercicios de entrenamiento para <br> respuesta a incidentes</h3>
+      </div>
+      <div class="service-card">
+        <h3>Revisión de Arquitectura OT</h3>
+        <p>Recomendaciones estratégicas de diseño y seguridad.</p>
+      </div>
+    </div>
+  </section>
+  
