--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -13,7 +13,7 @@
           <img src="../../../../assets/foto santi.png" class="d-block rounded-circle mx-auto" alt="Persona 2">
           <h3>Santiago Yaconis</h3>
           <p>Socio Fundador | Ing. Quimico <br>
-          Especialista en Automatización y Control de Procesos</p>
+          Linkedin Santiago Yaconis</p>
         </div>
       </div>
       
@@ -37,14 +37,14 @@
     <div class="team-member">
       <img src="../../../../assets/foto leo.png" class="rounded-circle" alt="Persona 1">
       <h3>Leonardo Gimeno</h3>
-      <p>Director Ejecutivo | Ing. Aeronáutico 
+      <p>Director Ejecutivo | Ing. Aeronáutico  <br>
        Linkedin Leonardo R Gimeno</p>
     </div>
     <div class="team-member">
       <img src="../../../../assets/foto santi.png" class="rounded-circle" alt="Persona 2">
       <h3>Santiago Yaconis</h3>
-          <p>Socio Fundador | Ing. Quimico 
-          Especialista en Automatización y Control de Procesos</p>
+          <p>Socio Fundador | Ing. Quimico <br>
+          Linkedin Santiago Yaconis</p>
     </div>
   </div>
 
