--- a/src/app/components/nabvar/procesos/procesos.component.html
+++ b/src/app/components/nabvar/procesos/procesos.component.html
@@ -1,11 +1,14 @@
 <div class="container-fluid section-process">
   <div class="row">
-    <div class="text-start text-white py-5">
-      <h3>PROCESO EN 3 PASOS</h3>
-    </div>
+    <div class="alianza-container">
+      <h1>Nuestra alianza con</h1>
+      <img src="../../../../assets/dragos.png" alt="Logo de Dragos" class="logo">
+      <p>PROGRAMA EFECTIVO DE CIBERCEGURIDAD ICS/OT</p>
+      
+  </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center d-md-none">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <!-- Indicadores del carrusel -->
       <div class="carousel-indicators">
@@ -19,20 +22,18 @@
         <div class="carousel-item active">
           <div class="row">
             <div class="col-md-6">
-              <div class="card process-step">
+              <div class="card card-1 process-step">
                 <div class="card-body h-100">
-                  <h1 class="step-number">1</h1>
-                  <h4>Análisis <br>y diagnóstico</h4>
-                  <p>Estudio detallado de los sistemas de OT y ciberseguridad.</p>
+                  <h4>Líderes en Ciber OT</h4>
+                  <p>Salem Technologies y Dragos, líderes en ciberseguridad para entornos de tecnología operativa (OT), brindan plataformas y servicios para proteger tus redes industriales.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-6 d-none d-md-block">
-              <div class="card process-step">
+              <div class="card card-2 process-step">
                 <div class="card-body">
-                  <h1 class="step-number">2</h1>
-                  <h4>Implementación de soluciones</h4>
-                  <p>Adaptación de tecnologías avanzadas para optimización y seguridad.</p>
+                  <h4>Dragos Platform</h4>
+                  <p>Visibilidad total de activos ICS/OT, vulnerabilidades y amenazas. Respuesta rápida a incidentes con monitoreo continuo y gestión de vulnerabilidades.</p>
                 </div>
               </div>
             </div>
@@ -43,20 +44,18 @@
         <div class="carousel-item">
           <div class="row">
             <div class="col-md-6">
-              <div class="card process-step">
-                <div class="card-body">
-                  <h1 class="step-number">2</h1>
-                  <h4>Implementación de soluciones</h4>
-                  <p>Adaptación de tecnologías avanzadas para optimización y seguridad.</p>
+              <div class="card card-2 process-step">
+                <div class="card-body">                 
+                  <h4>Dragos Platform</h4>
+                  <p>Visibilidad total de activos ICS/OT, vulnerabilidades y amenazas. Respuesta rápida a incidentes con monitoreo continuo y gestión de vulnerabilidades.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-6 d-none d-md-block">
-              <div class="card process-step">
-                <div class="card-body">
-                  <h1 class="step-number">3</h1>
-                  <h4>Monitoreo <br>y soporte continuo</h4>
-                  <p>Garantizamos la protección y eficiencia de tus sistemas 24/7.</p>
+              <div class="card card-3 process-step">
+                <div class="card-body">                  
+                  <h4>Protegiendo entornos OT</h4>
+                  <p>Acceso a TTPs de adversarios OT, puntajes CVSS personalizados y mitigaciones prácticas. Protege tus operaciones industriales con inteligencia en tiempo real.</p>
                 </div>
               </div>
             </div>
@@ -67,20 +66,18 @@
         <div class="carousel-item">
           <div class="row">
             <div class="col-md-6">
-              <div class="card process-step">
-                <div class="card-body">
-                  <h1 class="step-number">3</h1>
-                  <h4>Monitoreo <br>y soporte continuo</h4>
-                  <p>Garantizamos la protección y eficiencia de tus sistemas 24/7.</p>
+              <div class="card card-3 process-step">
+                <div class="card-body">                 
+                  <h4>Protegiendo entornos OT</h4>
+                  <p>Acceso a TTPs de adversarios OT, puntajes CVSS personalizados y mitigaciones prácticas. Protege tus operaciones industriales con inteligencia en tiempo real.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-6 d-none d-md-block">
-              <div class="card process-step">
-                <div class="card-body">
-                  <h1 class="step-number">1</h1>
-                  <h4>Análisis <br>y diagnóstico</h4>
-                  <p>Estudio de los sistemas de OT y ciberseguridad al detalle.</p>
+              <div class="card card-1 process-step">
+                <div class="card-body">              
+                  <h4>Líderes en Ciber OT</h4>
+                  <p>Salem Technologies y Dragos, líderes en ciberseguridad para entornos de tecnología operativa (OT), brindan plataformas y servicios para proteger tus redes industriales.</p>
                 </div>
               </div>
             </div>
@@ -99,4 +96,35 @@
       </button>
     </div>
   </div>
+  <div class="row d-none d-md-flex justify-content-center">
+    <div class="col-md-4">
+      <div class="card card-1 process-step">
+        <div class="card-body">
+         
+          <h4>Líderes en Ciber OT</h4>
+          <p>Salem Technologies y Dragos, líderes en ciberseguridad para entornos de tecnología operativa (OT), brindan plataformas y servicios para proteger tus redes industriales.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card card-2 process-step">
+        <div class="card-body">
+          
+          <h4>Dragos Platform</h4>
+          <p>Visibilidad total de activos ICS/OT, vulnerabilidades y amenazas. Respuesta rápida a incidentes con monitoreo continuo y gestión de vulnerabilidades.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card card-3 process-step">
+        <div class="card-body">
+          
+          <h4>Protegiendo entornos OT</h4>
+          <p>Acceso a TTPs de adversarios OT, puntajes CVSS personalizados y mitigaciones prácticas. Protege tus operaciones industriales con inteligencia en tiempo real.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
