--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -12,7 +12,10 @@
     </button>
     <div class="accordion-content" [ngClass]="{ active: isOpen[0] }">
       <p class="p1">
-        Detección temprana y respuesta a amenazas de ciberseguridad.
+        Servicios entregados por expertos en OT <br>
+        Plataformas: tecnología de software y hardware <br>
+        Plan de respuesta a incidentes específicos personalizados <br>
+
       </p>
     </div>
       <button class="accordion-btn" (click)="toggleAccordion(1)">
@@ -25,8 +28,10 @@
       </button>
       <div class="accordion-content" [ngClass]="{ active: isOpen[1] }">
         <p class="p2">
-          Soluciones para optimización y automatización de procesos
-          industriales.
+          Optimización de procesos <br>
+          Excelencia Operacional (HMI, Alarmas, Ventanas Operativas, Logbooks, etc) <br>
+          Análisis de estrategias de control y Control de Procesos <br>
+          
         </p>
       </div>
         <button class="accordion-btn" (click)="toggleAccordion(2)">
@@ -39,7 +44,9 @@
         </button>
         <div class="accordion-content" [ngClass]="{ active: isOpen[2] }">
           <p class="p3">
-            Implementación de tecnologías avanzadas para industria 4.0.
+            Analítica e IA aplicadas a entornos OT <br>
+            Demand Forcasting & Supply Chain <br>
+            
           </p>
         </div>
       </div>
