--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div id="home">
   <div class="banner-container">
-    <img src="../../../assets/principal desktop.png" class="banner-img"  alt="Banner" />
+    <img src="../../../assets/bannerdesktop.png" class="banner-img"  alt="Banner" />
     <div class="banner-content">
       <h1>Innovación <br> & seguridad</h1>
       <p>Nacidos en OT, con la experiencia que necesitas para un futuro digital sostenible.</p>
