--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -1,35 +1,30 @@
-.blank{
-  background: #ffffff;
-  height: 30px;
-  width: 100%;
-}
+
 .contact-form-container {
   background-image: url('./../../../../assets/que\ hacemos\ mobile.png');
   background-size: cover; /* Ajusta la imagen para que cubra toda el área */
   background-position: center; /* Centra la imagen en el contenedor */
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Asegura que el contenido del formulario esté centrado verticalmente */
   overflow: hidden; /* Oculta cualquier contenido que se desborde */
-}
-h1{
-  display: flex;
-    justify-content: center;
-    padding-top: 55px;
-    padding-bottom: 25px;
-    font-size: 33pt;
-  color: #ddd;
-  font-family: "GutonExtBd", Georgia; 
   
 }
-.contact-form {
-  background: none;
+  
+h1 {
   display: flex;
   flex-direction: column;
- 
+    flex-wrap: wrap;
+    align-content: center;
+  font-size: 2rem;
+  padding: 10px;
+  color: #ddd;
+  font-family: "GutonExtBd", Georgia;
+  
 }
 
+.contact-form {
+ 
+  background: none;
+  padding: 20px;
+}
 .form-group {
   background: none;
   display: flex;
@@ -66,7 +61,7 @@ textarea::placeholder{
   border-radius: 20px;
   border: none;
   font-family: "Guton", Georgia;
-  font-weight: 500;
+ 
 }
 
 
@@ -94,33 +89,34 @@ input[type="tel"] {
 
 @media (min-width: 768px) {
   .contact-form-container {
-    background-image: url('./../../../../assets/que\ hacemos\ desktop.png');
+    background-image: url('./../../../../assets/que hacemos desktop.png');
     background-size: cover; /* Ajusta la imagen para que cubra toda el área */
     background-position: center; /* Centra la imagen en el contenedor */
     padding: 20px;
     overflow: hidden; /* Oculta cualquier contenido que se desborde */
-  }
-  h1{
-    font-size: 3ram;
     display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     align-items: center;
+  }
+    
+  h1 {
+    width: 50%;
+    font-size: 4rem;
     padding: 10px;
     color: #ddd;
-    font-family: "GutonExtBd", Georgia; 
-    flex-direction: column;
+    font-family: "GutonExtBd", Georgia;
+    text-align: left;
   }
+  
   .contact-form {
+    width: 50%;
     background: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   
+    padding: 20px;
   }
   
   .form-group {
     background: none;
-    display: flex;
-    flex-direction: column;
    
   }
   .form-group input,
@@ -149,7 +145,7 @@ input[type="tel"] {
     resize: vertical;
   }
   .btn{
-    height: 80px;
+   
     background-color: #ddd !important;
     color: blue !important; 
     border-radius: 20px;
