--- a/src/app/components/nabvar/integraciones/nuestra-manera.component.html
+++ b/src/app/components/nabvar/integraciones/nuestra-manera.component.html
@@ -1,7 +1,7 @@
 <!-- Imagen y texto adicional -->
 <div class="image-text ">
   <img
-    src="../../../../assets/foto mobile.png"
+    src="../../../../assets/imagendeskt.png"
     alt="Imagen destacada"
     class="image"
   />
