arreglando detalles en gral

--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -5,6 +5,7 @@
   background-position: center; /* Centra la imagen en el contenedor */
   padding: 20px;
   overflow: hidden; /* Oculta cualquier contenido que se desborde */
+  padding-top: 35px;
   
 }
   
