fix correct procesos

--- a/src/app/components/nabvar/procesos/procesos.component.scss
+++ b/src/app/components/nabvar/procesos/procesos.component.scss
@@ -36,6 +36,7 @@
     background-image: url(../../../../assets/1card.png);
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-size: cover;
     
     
     }
@@ -43,13 +44,13 @@
     background-image: url(../../../../assets/3card.png);
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
-    
+    background-size: cover;
     }
     .card-3{
     background-image: url(../../../../assets/2card.png);
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
-    
+    background-size: cover;
     }
   .process-step {
    
