--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <p class="info">NUESTROS SERVICIOS</p>
     <H1 class="tittle"
-      >Automatizamos <br />
+      >Automatizamos
       y protegemos <br />
       tu industria</H1
     >
@@ -17,13 +17,13 @@
     </p>
   </div>
 </section>
-
+<div class="cta-button">
+  CONECTÁ CON EXPERTOS
+  <span class="arrow">→</span>
+</div>
 <div class="seccion seccion2">
-  <div class="cta-button">
-    CONECTÁ CON EXPERTOS
-    <span class="arrow">→</span>
-  </div>
-  <img
+  <div class="container">
+    <img
     src="../../../assets/Candado.png"
     alt="Icono de seguridad"
     class="icon"
@@ -45,9 +45,12 @@
         Seguridad proactiva y protección integral para tecnologías de operación.
       </p>
     </div>
+    </div>
+
   </div>
 </div>
 <div class="seccion seccion3">
+  <div class="container">
   <img src="../../../assets/Tuerca.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
     <h2 class="title">
@@ -66,8 +69,10 @@
     </div>
   </div>
 </div>
+</div>
 <div class="seccion seccion4">
-  <img src="../../../assets/Nube.png" alt="Icono de seguridad" class="icon" />
+  <div class="container">
+    <img src="../../../assets/Nube.png" alt="Icono de seguridad" class="icon" />
   <div class="content">
     <h2 class="title">Soluciones Avanzadas <br> en Transformación Digital</h2>
     <p class="description">
@@ -83,6 +88,8 @@
       </p>
     </div>
   </div>
+  
+</div>
 </div>
 <div class="seccion5">
   <div class="content">
@@ -116,10 +123,11 @@
       y seguras que impulsen tu
       crecimiento en un mundo digital.
     </p>
+   
   </div>
-  <div class="cta-button2">
-    ¿TENES UN PROYECTO?
-  </div>
+
 </div>
 
-
+<div class="cta-button2">
+  ¿TENES UN PROYECTO?
+</div>
